metadata/objects/Vedamo_Session_Participants__c.object
<CustomObject>
    <fields>
        <fullName>API_Operation_Error__c</fullName>
        <label>API Operation Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Operation_Status__c</fullName>
        <label>API Operation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Participant_URL__c</fullName>
        <label>API Participant URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Participant_Email__c</fullName>
        <label>Participant Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Notify__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Participant Notify</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
                <value>
                    <fullName>email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participant_Role__c</fullName>
        <defaultValue>&quot;admin&quot;</defaultValue>
        <label>Participant Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>user</fullName>
                </value>
                <value>
                    <fullName>admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participant_User_ID__c</fullName>
        <label>Participant User ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_name__c</fullName>
        <label>Participant name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_ID__c</fullName>
        <label>Session ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Vedamo Session Participants</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Vedamo Session Participants Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vedamo Session Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>